[metadata]
name = torcp
description = A script to rename and copy downloaded files to a target in Emby-happy way
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/ccf-2012/torcp
author = ccf2012
classifiers =
    Environment :: Console
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls = 
    Documentation = https://github.com/ccf-2012/torcp/blob/main/README.md
    Source = https://github.com/ccf-2012/torcp
    Tracker = https://github.com/ccf-2012/torcp/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    tmdbv3api
python_requires = >=3.6
setup_requires =
    setuptools_scm

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    torcp = torcp.torcp:main
    tortitle = torcp.tortitle:main
    torcp-clean = torcp.DeleteEmptyFolders:main

[options.extras_require]
test =
    pytest
all =
    %(test)s